# 35.2-Python

./: .env.sample  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py
materials/: models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_course_description_alter_lesson_description_and_more.py  0003_lesson_course.py  0004_alter_lesson_course.py  0005_course_owner.py  0006_lesson_owner.py  0007_subscription.py
users/: admin.py  models.py  permmissions.py  serializers.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_payments_link_payments_session_id.py
